[package]
name = "parser"
version = "0.1.0"
edition = "2024"
description = "A package which allows lalr1, and lr1 parsing. Comes with a regex engine."
license = "MIT"

[dependencies]
shared_structs = { path = "./shared_structs", version = "0.1.0" }
proc_macro = { path = "./proc_macro", version = "0.1.0" }

[workspace]
resolver = "3"
members = ["proc_macro", "shared_structs"]

[features]
lr1 = ["shared_structs/lr1", "proc_macro/lr1"]
