[package]
name = "parser"
version = "0.1.0"
edition = "2024"
description = "A package which allows lalr1, and lr1 parsing. Comes with a regex engine."
license = "MIT"

[dependencies]
shared_structs = { path = "./shared_structs", version = "0.1.0" }
parsing_macro = { path = "./parsing_macro", version = "0.1.0" }

[workspace]
resolver = "3"
members = ["parsing_macro", "shared_structs"]

[features]
lr1 = ["shared_structs/lr1", "parsing_macro/lr1"]
