[package]
name = "lr_rust"
version = "0.1.1"
edition = "2024"
description = "A package for LALR(1) and LR(1) parsing."
license = "MIT"

[dependencies]
lr_rust_shared_structs = { path = "./lr_rust_shared_structs", version = "0.1.0" }
lr_rust_parsing_macro = { path = "./lr_rust_parsing_macro", version = "0.1.0" }

[workspace]
resolver = "3"
members = ["lr_rust_parsing_macro", "lr_rust_shared_structs"]

[features]
lr1 = ["lr_rust_shared_structs/lr1", "lr_rust_parsing_macro/lr1"]
