[package]
name = "proc_macro"
version = "0.1.0"
edition = "2024"
description = "proc_macro sub library for hfytr's parsing library."
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.104", features = ["full"] }
shared_structs = { path = "../shared_structs", version = "0.1.0" }
proc-macro2 = "1.0.95"
quote = "1.0.40"

[features]
lr1 = ["shared_structs/lr1"]
